# Fenceline

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCLAIMER.md  LICENSE  Makefile  QUEST.md  README.md  RELEASE_NOTES_v0.6.0.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  exploit_case_study.md  map_update.md
.github/workflows/: ci.yml  integration-test.yml  map-freshness.yml
action/: action.yml
docs/: landscape.md  newsroom.md  playbook.md  supply-chain-for-dummies.md  why-this-matters.md
examples/safe-project/: README.md  package.json  test.sh
exploits/: 2018-event-stream.md  2021-codecov.md  2021-ua-parser-js.md  2022-colors-faker.md  2024-polyfill-io.md  2024-ultralytics.md  2024-xz-utils.md  2025-chalk-debug.md  2025-nx-s1ngularity.md  2026-axios-rat.md  2026-teampcp-campaign.md  README.md  template.md
map/: README.md  schema.yaml
map/cdns/: aws.yaml  cloudflare.yaml  fastly.yaml  google-cloud.yaml
map/tools/: cargo.yaml  composer.yaml  go-modules.yaml  homebrew.yaml  npm.yaml  pip.yaml  rubygems.yaml  yarn.yaml
src/fenceline/: __main__.py  cli.py  log.py  map_check.py  wrap.py
src/fenceline/actions/: audit.py
src/fenceline/check/: cache.py  capabilities.py  lockfile.py  provenance.py  registry.py  scanner.py  scoring.py
src/fenceline/deepmap/: loader.py  models.py
src/fenceline/init/: hooks.py
src/fenceline/install/: dns_monitor.py  fsdiff.py  http_logger.py  matcher.py  monitor.py  sandbox.py  wrapper.py
src/fenceline/output/: console.py  github.py
testing/: README.md  harness.sh
testing/reports/: template.md
testing/simulations/: test-child-process.sh  test-dns-exfil.sh  test-mining-pool.sh  test-outbound-exfil.sh  test-postinstall.sh
tests/: test_actions.py  test_cache.py  test_capabilities.py  test_cli.py  test_dns_monitor.py  test_fsdiff.py  test_hooks.py  test_http_logger.py  test_loader.py  test_lockfile.py  test_map_check.py  test_matcher.py  test_monitor.py  test_netstat_parser.py  test_output.py  test_provenance.py  test_pypi.py  test_registry.py  test_sandbox.py  test_scanner.py  test_scoring.py  test_security.py  test_wrap.py
tests/fixtures/: Pipfile.lock.changed  package-lock-base.json  package-lock-changed.json  test-workflow.yml
tests/integration/: test_docker.py
tools/: quick-check.sh  validate-packages.sh
