[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fenceline"
version = "0.4.0"
description = "Supply chain security tools — create clarity in chaos"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
dependencies = ["pyyaml>=6.0"]
keywords = [
    "supply-chain",
    "security",
    "npm",
    "lockfile",
    "dependency",
    "network-monitor",
    "provenance",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
]

[project.urls]
Homepage = "https://github.com/Karmona/Fenceline"
Repository = "https://github.com/Karmona/Fenceline"
Issues = "https://github.com/Karmona/Fenceline/issues"
Changelog = "https://github.com/Karmona/Fenceline/blob/main/CHANGELOG.md"

[project.scripts]
fenceline = "fenceline.cli:main"

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[tool.hatch.build.targets.wheel]
packages = ["src/fenceline"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py39"
line-length = 100
